meme footer sur tt les layout. Bouton nous contacter en z-index pour fix du bouton inclaquable

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -37,6 +37,11 @@ body{
 	height: auto;
 }
 
+/* Button contact us */
+#contactUs{
+    z-index: 5;
+}
+
 /* ------------------- Carousel Styling ------------------- */
 
 .carousel-inner {
@@ -368,3 +373,4 @@ a.youtube:after {
   -webkit-transition: all .8s;
   transition: all .8s;
 }
+
